<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Last Server Standing</string>
    <string name="tagline">Defend the Last Data Center</string>
    <string name="start_wave">Start Wave %1$d</string>
    <string name="continue_game">Continue</string>
    <string name="new_game">New Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="data_center_health">Data Center Health</string>
    <string name="wave">Wave</string>
    <string name="resources">Resources</string>
    <string name="pause_game">Pause Game</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="breach_detected">Breach Detected!</string>
    <string name="select_tower">Select Tower</string>
    <string name="tower_icon">Tower Icon</string>
    <string name="cost">Cost</string>
    <string name="tower_info">Tower Information</string>
    <string name="delete_tower">Delete Tower</string>
    <string name="locked">Locked</string>
    <string name="background_desc">Background Animation</string>

    <!-- Tower dialog strings -->
    <string name="tower_name_format">%s Tower</string>
    <string name="tower_level_format">Level %d</string>
    <string name="upgrade_button_format" tools:ignore="PluralsCandidate">Upgrade - %d resources</string>
    <string name="max_level">Max Level</string>
    <string name="not_enough_resources">Not enough resources!</string>
    <string name="tower_upgraded_format">%1$s upgraded to Level %2$d!</string>

    <!-- Load Game strings -->
    <string name="load_game">Load Game</string>
    <string name="no_saved_games">No saved games found</string>
    <string name="delete_save">Delete save</string>
    <string name="wave_format">Wave %d</string>
    <string name="score_format">Score: %,d</string>
    <string name="autosave_badge">AUTO</string>
    <string name="confirm_delete_save">Delete this saved game?</string>
    <string name="save_deleted">Save deleted</string>
    <string name="failed_to_load">Failed to load game</string>
    <string name="start_next_wave">Start Next Wave</string>
    <string name="_500">500</string>
    <string name="fps">FPS:</string>
    <string name="_60">60</string>
    <string name="firewall_tower">Firewall Tower</string>
    <string name="honeypot_tower">Honeypot Tower</string>
    <string name="jammer_tower">Jammer Tower</string>
    <string name="_1">1</string>

    <!-- Settings strings -->
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="player_name">Player Name</string>
    <string name="audio">Audio</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="sound_effects_description">Enable in-game sound effects</string>
    <string name="haptics">Haptics</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_description">Enable haptic feedback</string>
    <string name="display">Display</string>
    <string name="tower_ranges">Tower Ranges</string>
    <string name="tower_ranges_description">Show attack range circles for towers</string>
    <string name="toggle_tower_ranges">Toggle tower range indicators</string>
    <string name="save_settings">Save Settings</string>
    <string name="main_menu">Main Menu</string>
    <string name="toggle_sound_effects">Toggle sound effects</string>
    <string name="toggle_vibration">Toggle vibration</string>

    <!-- Stats/Leaderboard strings -->
    <string name="add_test_data">Add Test Data</string>
    <string name="clear_data">Clear Data</string>
    <string name="reload">Reload</string>
    <string name="no_data">No data</string>
    <string name="no_leaderboard_data">No leaderboard data available</string>
    <string name="play_games_prompt">Play some games to see your highest waves here!</string>
    <string name="player_name_placeholder">Player Name</string>
    <string name="timestamp_placeholder">2 days ago</string>
    <string name="_10">10</string>
    <string name="wave_placeholder">Wave 5</string>
    <string name="score_placeholder">Score: 1,234</string>
    <string name="date_placeholder">Jan 15, 2025 10:30 AM</string>
    <string name="close">Close</string>
    
    <!-- Tower card strings -->
    <string name="firewall">Firewall</string>
    <string name="level_1">Level 1</string>
    <string name="cost_100">100</string>
    <string name="firewall_description">Basic defense tower with high fire rate.</string>
    <string name="damage_15">10</string>
    <string name="range_150">150</string>
    <string name="fire_rate_2_0">2.0</string>
    <string name="upgrade">Upgrade</string>

    <!-- Info Section strings -->
    <string name="game_info">Game Info</string>
    <string name="view_info">View Info</string>
    <string name="game_info_description">Learn about towers and enemies</string>
    <string name="towers">Towers</string>
    <string name="enemies">Enemies</string>

    <!-- Tower Info Descriptions -->
    <string name="firewall_tower_info"><b>Firewall Tower</b>\n\nCost: 200\nDamage: 10\nRange: 150\nFire Rate: 2.0/sec\n\n<b>Ability:</b> Applies a burn effect that deals damage over time (50% of direct damage for 2.5 seconds). Gains penetration chance with upgrades, potentially damaging multiple enemies.</string>
    <string name="honeypot_tower_info" tools:ignore="StringFormatInvalid"><b>Honeypot Tower</b>\n\nCost: 300\nDamage: 15\nRange: 120\nFire Rate: 1.5/sec\n\n<b>Ability:</b> Covers enemies in sticky glue, slowing their movement by 50% for 3 seconds. Excellent for controlling enemy movement and creating choke points.</string>
    <string name="jammer_tower_info"><b>Jammer Tower</b>\n\nCost: 400\nDamage: 10\nRange: 200\nFire Rate: 3.0/sec\n\n<b>Ability:</b> Stuns enemies for 0.5 seconds with very fast attack speed. Wide range makes it ideal for covering large areas and hitting multiple targets.</string>

    <!-- Enemy Info Descriptions -->
    <string name="data_crawler_info"><b>Data Crawler</b>\n\nHealth: 50\nSpeed: 120\nReward: 5 resources\nDamage: 5\n\n<b>Description:</b> Fast-moving web scraping bots with low health. They move quickly but are easy to destroy. Good for farming early resources.</string>
    <string name="virus_bot_info"><b>Virus Bot</b>\n\nHealth: 100\nSpeed: 100\nReward: 10 resources\nDamage: 10\n\n<b>Description:</b> Virus-infected systems with moderate health and speed. Appears starting from wave 5. A balanced threat that requires attention.</string>
    <string name="trojan_horse_info"><b>Trojan Horse</b>\n\nHealth: 200\nSpeed: 80\nReward: 20 resources\nDamage: 20\n\n<b>Description:</b> Sophisticated malware systems that are slow but extremely tanky. Appears starting from wave 10. Requires concentrated fire from multiple towers.</string>
</resources>